# tsync

./: Cargo.toml
src/: lib.rs  utils.rs
src/to_typescript/: consts.rs  enums.rs  structs.rs  type_item.rs
tsync-macro/: Cargo.toml
tsync-macro/src/: lib.rs
